==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/nxp/src/tim/implementation_1/hal_ll_tim.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_tim.h"
#include "hal_ll_tim_pin_map.h"
#include "hal_ll_rcc.h"
#define HAL_LL_TIM_CHANNEL_COUNT            8
#define HAL_LL_TIM_SOPT1                    0x80000UL
#define HAL_LL_TIM0_SIM_SCGC6               0x1000000UL
#define HAL_LL_TIM1_SIM_SCGC6               0x2000000UL
#define HAL_LL_TIM2_SIM_SCGC6               0x4000000UL
#define HAL_LL_TIM3_SIM_SCGC6               0x40UL
#define HAL_LL_TIM_SIM_SCGC6_DEFAULT        0x1UL
#define HAL_LL_TIM0_SIM_SCGC6               0x61000001UL
#define HAL_LL_TIM1_SIM_SCGC6               0x62000001UL
#define HAL_LL_TIM2_SIM_SCGC6               0x64000001UL
#define HAL_LL_TIM3_SIM_SCGC6               0x60000001UL
#define HAL_LL_TIM_SIM_SCGC6_DEFAULT        0x40000001UL
#define HAL_LL_TIM2_SIM_SCGC3               0x1000000UL
#define HAL_LL_TIM3_SIM_SCGC3               0x2000000UL
#define HAL_LL_TIM_SIM_SCGC3_DEFAULT        0x0UL
#define HAL_LL_TIM_SIM_SCGC5_PORTA          0x200UL
#define HAL_LL_TIM_SIM_SCGC5_PORTB          0x400UL
#define HAL_LL_TIM_SIM_SCGC5_PORTC          0x800UL
#define HAL_LL_TIM_SIM_SCGC5_PORTD          0x1000UL
#define HAL_LL_TIM_SIM_SCGC5_PORTE          0x2000UL
#define HAL_LL_TIM_MODE_FTMEN               0U
#define HAL_LL_TIM_MODE_FTMEN_MASK          0x1UL
#define HAL_LL_TIM_MODE_WPDIS               2U
#define HAL_LL_TIM_RESET_MODE_REGISTER      4
#define HAL_LL_TIM_SC_PS_MASK               0x7UL
#define HAL_LL_TIM_SC_PS_SHIFT              0

hal_ll_err_t hal_ll_tim_register_handle( hal_ll_pin_name_t pin, hal_ll_tim_handle_register_t *handle_map,
                                                                uint8_t *hal_module_id ) {

    uint8_t index;
    uint16_t pin_check_result;

    if ( HAL_LL_PIN_NC == ( pin_check_result = _hal_ll_tim_check_pin( pin, &index, handle_map ) ) ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    if ( pin != hal_ll_tim_hw_specifics_map[ pin_check_result ].config.pin ){
        _hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], false );

        _hal_ll_tim_map_pin( pin_check_result, index );

        _hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], true );

        handle_map[ pin_check_result ].init_ll_state = false;

        hal_ll_module_state[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = ( handle_t * )&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    handle_map[ pin_check_result ].hal_ll_tim_handle = ( handle_t *)&hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle;

    return HAL_LL_TIM_SUCCESS;

}

hal_ll_err_t hal_ll_module_configure_tim( handle_t *handle ) {

    uint8_t index;
    uint16_t pin_check_result;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    if ( HAL_LL_PIN_NC == ( pin_check_result = _hal_ll_tim_check_pin( hal_ll_tim_hw_specifics_map_local->config.pin, &index, (void *)0 ) ) ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = (handle_t *)&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    return HAL_LL_TIM_SUCCESS;

}

hal_ll_err_t hal_ll_tim_start( handle_t *handle ) {

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    if( NULL == low_level_handle->hal_ll_tim_handle ) {
        return HAL_LL_TIM_MODULE_ERROR;
    }

    clear_reg_bit(&hal_ll_hw_reg->sc, HAL_LL_TIM_SC_TOF);

    _hal_ll_tim_enable_pwm_mode(hal_ll_tim_hw_specifics_map_local);

    return HAL_LL_TIM_SUCCESS;

}

uint32_t hal_ll_tim_set_freq( handle_t *handle, uint32_t freq_hz ) {

    uint32_t tmp_channel = 0;
    uint32_t tmp_freq;
    uint32_t max_period;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    low_level_handle->init_ll_state = false;

    tmp_channel = hal_ll_tim_hw_specifics_map_local->config.channel;

    _hal_ll_tim_set_clock(hal_ll_tim_hw_specifics_map_local->base,true);
    hal_ll_tim_stop(handle);

    max_period = _hal_ll_tim_get_clock_speed(hal_ll_tim_hw_specifics_map_local->base) / (freq_hz * 4) - 1;

    if ( max_period > UINT16_MAX ) {
        tmp_freq = _hal_ll_tim_get_clock_speed( hal_ll_tim_hw_specifics_map_local->base ) / (UINT16_MAX + 1) / 4;
    } else {
        tmp_freq = freq_hz;
    }
    hal_ll_tim_hw_specifics_map_local->freq_hz = tmp_freq;

    _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );
    low_level_handle->init_ll_state = true;

    return tmp_freq;

}

hal_ll_err_t hal_ll_tim_set_duty( handle_t *handle, float duty_ratio ) {

    uint32_t max_duty = 0;
    uint32_t max_period;
    uint8_t channel;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    if( NULL == low_level_handle->hal_ll_tim_handle ) {
        return HAL_LL_TIM_MODULE_ERROR;
    }

    if ( false == low_level_handle->init_ll_state ) {
        hal_ll_tim_start( handle );
        low_level_handle->init_ll_state = true;
    }

    max_period = _hal_ll_tim_get_clock_speed(hal_ll_tim_hw_specifics_map_local->base) / (hal_ll_tim_hw_specifics_map_local->freq_hz * 4)-1;

    max_duty = ( float )max_period * (1 - duty_ratio);

    hal_ll_hw_reg->cntin &= ~HAL_LL_TIM_CNTIN_INIT_MASK;
    hal_ll_hw_reg->cntin |= (0 << HAL_LL_TIM_CNTIN_INIT_SHIFT) & HAL_LL_TIM_CNTIN_INIT_MASK;

    channel = hal_ll_tim_hw_specifics_map_local->config.channel;

    _hal_ll_tim_set_mode(hal_ll_hw_reg, max_period);
    _hal_ll_tim_set_chn_count_val(hal_ll_hw_reg, channel, max_duty);

    hal_ll_hw_reg->sc &= ~HAL_LL_TIM_SC_CLKS_MASK;
    hal_ll_hw_reg->sc |= ( 1 << HAL_LL_TIM_SC_CLKS_SHIFT) & HAL_LL_TIM_SC_CLKS_MASK;

    set_reg_bit(&hal_ll_hw_reg->sync, HAL_LL_TIM_SYNC_SWSYNC);

    hal_ll_hw_reg->mode &= ~HAL_LL_TIM_MODE_FTMEN_MASK;

    return HAL_LL_TIM_SUCCESS;

}

hal_ll_err_t hal_ll_tim_stop( handle_t *handle ) {

    uint8_t channel;
    uint8_t chnl_pair_num;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    if( NULL == low_level_handle->hal_ll_tim_handle ) {
        return HAL_LL_TIM_MODULE_ERROR;
    }

    channel = hal_ll_tim_hw_specifics_map_local->config.channel;
    chnl_pair_num = hal_ll_tim_hw_specifics_map_local->channel_pair_index;

    _hal_ll_tim_set_chn_count_val(hal_ll_hw_reg, channel, 0);

    hal_ll_hw_reg->controls[channel].csc &= ~HAL_LL_TIM_CnSC_ELSA_MASK;
    hal_ll_hw_reg->controls[channel].csc &= ~HAL_LL_TIM_CnSC_ELSB_MASK;

    hal_ll_hw_reg->controls[channel].csc &= ~HAL_LL_TIM_CnSC_MSA_MASK;
    hal_ll_hw_reg->controls[channel].csc &= ~HAL_LL_TIM_CnSC_MSB_MASK;

    clear_reg_bit(&hal_ll_hw_reg->sc, HAL_LL_TIM_SC_CPWMS);

    hal_ll_hw_reg->combine  &= ~(HAL_LL_TIM_COMBINE_COMBINE0_MASK << (chnl_pair_num * HAL_LL_TIM_COMBINE_CHAN_CTRL_WIDTH));

    return HAL_LL_TIM_SUCCESS;

}

void hal_ll_tim_close( handle_t *handle ) {

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_tim_get_module_state_address);

    if( NULL != low_level_handle->hal_ll_tim_handle ) {
        low_level_handle->hal_ll_tim_handle = NULL;
        low_level_handle->hal_drv_tim_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_tim_hw_specifics_map_local->freq_hz = 0;

        _hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_local, false );
        _hal_ll_tim_set_clock( hal_ll_tim_hw_specifics_map_local->base, false );

        hal_ll_tim_hw_specifics_map_local->config.pin = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.channel = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.af = NULL;
    }
}

static hal_ll_pin_name_t _hal_ll_tim_check_pin( hal_ll_pin_name_t pin, uint8_t *index, hal_ll_tim_handle_register_t *handle_map ) {

    hal_ll_pin_name_t pin_num;
    uint8_t index_counter = 0;
    uint8_t hal_ll_module_id = 0;
    static const uint16_t map_size = ( sizeof( _tim_map ) / sizeof( hal_ll_tim_pin_map_t ) );

    if ( HAL_LL_PIN_NC == pin ) {
        return HAL_LL_PIN_NC;
    }

    // Check if the selected pin is valid.
    for ( pin_num = 0; pin_num < map_size; pin_num++ ) {
        if ( pin == _tim_map[ pin_num ].pin ) {
            // Get module number
            hal_ll_module_id = _tim_map[ pin_num ].module_index;
            if ( NULL == handle_map[hal_ll_module_id].hal_drv_tim_handle ) {
                *index = pin_num;
                return hal_ll_module_id;
            } else if ( TIM_MODULE_COUNT == ++index_counter ) {
                return --index_counter;
            }
        }
    }
    // By default return last error msg.
    if ( index_counter ) {
        return hal_ll_module_id;
    } else {
        return HAL_LL_PIN_NC;
    }
}

static void _hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_t *map, bool hal_ll_state ) {

    module_struct module;

    if ( HAL_LL_PIN_NC != map->config.pin ) {
        module.pins[0] = VALUE( map->config.pin, map->config.af );
        module.pins[1] = GPIO_MODULE_STRUCT_END;

        module.configs[0] = GPIO_CFG_MODE_ALT_FUNCTION;
        module.configs[1] = GPIO_MODULE_STRUCT_END;

        hal_ll_gpio_module_struct_init( &module, hal_ll_state );
    }
}

static void _hal_ll_tim_hw_init( hal_ll_tim_hw_specifics_map_t *map ) {
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( map->base );

    set_reg_bit(&hal_ll_hw_reg->mode, HAL_LL_TIM_MODE_FTMEN );

    hal_ll_hw_reg->sc &= ~HAL_LL_TIM_SC_PS_MASK;
    hal_ll_hw_reg->sc |= (0 << HAL_LL_TIM_SC_PS_SHIFT) & HAL_LL_TIM_SC_PS_MASK;

    _hal_ll_tim_hw_init_set_sync_mode(hal_ll_hw_reg);

    hal_ll_hw_reg->conf &= ~HAL_LL_TIM_CONF_NUMTOF_MASK;
    hal_ll_hw_reg->conf |= (0<<HAL_LL_TIM_CONF_NUMTOF_SHIFT) & HAL_LL_TIM_CONF_NUMTOF_MASK;

    set_reg_bit(&hal_ll_hw_reg->mode, HAL_LL_TIM_MODE_WPDIS);

    hal_ll_hw_reg->conf &= ~HAL_LL_CONF_BDMMODE_MASK;
    hal_ll_hw_reg->conf |= (0<<HAL_LL_CONF_BDMMODE_SHIFT) & HAL_LL_CONF_BDMMODE_MASK;

    hal_ll_hw_reg->sc &= ~HAL_LL_TIM_SC_PS_MASK;
    hal_ll_hw_reg->sc |= (1 << HAL_LL_TIM_SC_PS_SHIFT) & HAL_LL_TIM_SC_PS_MASK;
}

static void _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_t *map ) {
    _hal_ll_tim_gate_control( map->config.pin );

    _hal_ll_tim_set_clock( map->base, true );

    _hal_ll_tim_alternate_functions_set_state( map, true );

    _hal_ll_tim_restart_register( map );

    _hal_ll_tim_hw_init( map );
}
